--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@reduxjs/toolkit": "^2.3.0",
     "formik": "^2.4.6",
     "nanoid": "^5.0.7",
+    "persist": "^0.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
